--- a/warn-service/src/main/resources/application.properties
+++ b/warn-service/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.profiles.active=daily
 server.port=8051
 server.session.timeout=86400
 server.tomcat.uri-encoding=UTF-8
+spring.session.store-type=none
 spring.application.name=warn-service
 #management
 management.security.enabled=false
@@ -10,20 +11,20 @@ management.security.enabled=false
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 mybatis.mapper-locations=classpath:com.rhythm.warn.mapper/*.xml
 mybatis.typeAliasesPackage=com.rhythm.warn.entity
-spring.datasource.url=jdbc:mysql://url?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=username
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://192.168.0.248:3306/warn?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=a+rquQe5KMGKKkmFJkl0
 spring.datasource.max-active=20
 spring.datasource.max-idle=8
 spring.datasource.min-idle=8
 spring.datasource.initial-size=10
 #redis
-redis.conn.host=host
-redis.conn.port=port
+redis.conn.host=192.168.100.13
+redis.conn.port=6379
 redis.conn.password=
 redis.conn.timeout=5000
-redis.cache.conn.host=host
-redis.cache.conn.port=port
+redis.cache.conn.host=192.168.100.13
+redis.cache.conn.port=6379
 redis.cache.conn.password=
 redis.cache.conn.timeout=5000
 #zookeeper config
