--- a/warn-service/pom.xml
+++ b/warn-service/pom.xml
@@ -167,6 +167,12 @@
             <artifactId>swagger-spring-boot-starter</artifactId>
             <version>1.7.0.RELEASE</version>
         </dependency>
+
+        <!--<dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>21.0</version>
+        </dependency>-->
     </dependencies>
 
     <build>
